<resources>
    <string name="app_name">Simple F1 App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="main_fragment_label">Main Menu</string>
    <string name="drivers_fragment_label">Drivers</string>
    <string name="circuits_fragment_label">Tracks</string>
    <string name="constructors_fragment_label">Teams</string>
    <string name="driver_details_fragment_label">Driver Details</string>
    <string name="circuit_details_fragment_label">Track Details</string>
    <string name="constructor_details_fragment_label">Team Details</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="drivers_filter_tv">Name to filter</string>
    <string name="circuits_filter_tv">Circuit name</string>
    <string name="constructors_filter_tv">"Team name: "</string>
    <string name="driver_number_not_available">N/a</string>
    <string name="driver_details_birthdate">Birth</string>
    <string name="driver_details_nationality">Nationality</string>
    <string name="driver_details_number">Number</string>
    <string name="driver_details_id">Id</string>
    <string name="constructor_details_id">id</string>
    <string name="constructor_details_nationality">Nationality</string>
</resources>