<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="12dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="6dp"
        tools:style="@style/CardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/driver_name_details_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="12dp"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="Fernando Alonso"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="5dp"
                    tools:style="@style/CardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#5E9EA0"
                            android:gravity="center_horizontal"
                            android:paddingBottom="8dp"
                            android:paddingTop="8dp"
                            android:text="@string/driver_details_id"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/driver_id_details_textView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_horizontal"
                            android:paddingBottom="8dp"
                            android:paddingTop="8dp"
                            tools:text="Italian"
                            android:textSize="16sp"
                            android:maxLines="1"
                            android:textStyle="bold"
                            app:autoSizeTextType="uniform"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="5dp"
                    tools:style="@style/CardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#5E9EA0"
                            android:gravity="center_horizontal"
                            android:paddingBottom="8dp"
                            android:paddingTop="8dp"
                            android:text="@string/driver_details_number"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/driver_number_details_textView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_horizontal"
                            android:paddingBottom="8dp"
                            android:paddingTop="8dp"
                            tools:text="59"
                            android:textSize="16sp"
                            android:maxLines="1"
                            android:textStyle="bold"
                            app:autoSizeTextType="uniform"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="5dp"
                    tools:style="@style/CardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#5E9EA0"
                            android:gravity="center_horizontal"
                            android:paddingBottom="8dp"
                            android:paddingTop="8dp"
                            android:text="@string/driver_details_nationality"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/driver_nationality_details_textView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_horizontal"
                            android:paddingBottom="8dp"
                            android:paddingTop="8dp"
                            tools:text="South korean"
                            android:textSize="16sp"
                            android:maxLines="1"
                            android:textStyle="bold"
                            app:autoSizeTextType="uniform"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="5dp"
                    tools:style="@style/CardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#5E9EA0"
                            android:gravity="center_horizontal"
                            android:paddingBottom="8dp"
                            android:paddingTop="8dp"
                            android:text="@string/driver_details_birthdate"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/driver_birth_details_textView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:paddingBottom="8dp"
                            android:paddingTop="8dp"
                            tools:text="1995-05-04"
                            android:textSize="16sp"
                            android:maxLines="1"
                            android:textStyle="bold"
                            app:autoSizeTextType="uniform"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="6dp"
                app:cardElevation="5dp"
                tools:style="@style/CardView">

                <ImageView
                    android:id="@+id/driver_picture_details_imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>